[metadata]
name = imbi
version = file: VERSION
description = Imbi is a DevOps Service Management Platform designed to provide an efficient way to manage a large environment that contains many services and applications.
license = BSD 3-Clause License
license-file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
home-page = https://github.com/aweber/imbi
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
requires-dist = setuptools

[options]
include_package_data = True
install_requires =
    aioredis>=1.2.0,<2
    aiopg>=1.0.0,<2
    arrow>=0.15.5,<1
    distro==1.5.0
    jsonpatch>=1.25,<2
    ietfparse>=1.5.1,<2
    isodate==0.6.0
    iso8601
    ldap3>=2.5,<3
    pycurl
    pyyaml
    sprockets.http>2,<3
    sprockets.mixins.correlation>=2,<3
    sprockets.mixins.mediatype>3,<4
    sprockets-postgres>=1.6.1,<2
    tornado>6,<7
    tornado-problem-details>=0.0.6,<1
    tornado_openapi3>=0.2.4,<1
    u-msgpack-python>=2.1,<3
    validators

packages = imbi
zip_safe = false

[options.entry_points]
console_scripts =
    imbi = imbi.server:run

[options.extras_require]
sentry =
    sentry-sdk>=0.19.5,<1
testing =
    bandit==1.6.2
    coverage==5.0.4
    flake8==3.7.9
    flake8-comprehensions==3.2.2
    flake8-deprecated==1.3
    flake8-import-order==0.18.1
    flake8-quotes==3.0.0
    flake8-rst-docstrings==0.0.13
    flake8-tuple==0.4.1

[entry_points]
bandit.formatters =
    screen = bandit_screen:formatter

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    imbi/*
omit =
    tests/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = imbi,tests
exclude = acceptance,build,ci,dist,env,scaffolding,ui
import-order-style = pycharm
rst-roles = attr,class,const,data,exc,func,meth,mod,obj
