[project]
name = "imbi-api"
version = "2.18.0"
description = "Imbi is a DevOps Service Management Platform designed to provide an efficient way to manage a large environment that contains many services and applications."
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [
  { name = "Alex Campbell", email = "alexc@aweber.com" },
  { name = "Dave Shawley", email = "daves@aweber.com" },
  { name = "Gavin M. Roy", email = "gavinr@aweber.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "Pillow",
  "aioboto3>=15.5.0",
  "aiohttp",
  "argon2-cffi>=25.1.0",
  "authlib>=1.6.11",
  "cyclonedx-python-lib>=11.7,<12",
  "fastapi",
  "filetype",
  "httpx>=0.28.1,<1",
  "imbi-common[databases,llm,sentry,server]==2.18.0",
  "jinja2",
  "jsonpatch>=1.33",
  "mcp>=1.26.0",
  "nanoid>=2.0.0",
  "orjson>=3.11.6",
  "pydantic[email]",
  "pyotp>=2.9.0",
  "python-multipart>=0.0.26",
  "qrcode>=8.0",
  "sentry-sdk>=2.48.0,<3",
  "slowapi==0.1.9",
  "typer",
  "uvicorn",
  "yarl",
]

[project.scripts]
imbi-api = "imbi.api.entrypoint:main"

[project.optional-dependencies]
otel = [
  "opentelemetry-distro",
  "opentelemetry-instrumentation-asyncio",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-instrumentation-httpx",
  "opentelemetry-instrumentation-jinja2",
]
sentry = [
  "sentry-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Coverage for the per-member `moon run api:test` run. Scoped to this
# member so the report/threshold reflect only imbi.api; the aggregate
# `root:coverage` run uses the root pyproject config instead.
[tool.coverage.run]
branch = true
source_pkgs = ["imbi.api"]

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 85
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/imbi"]
include = [
  "src/imbi/api/py.typed",
  "src/imbi/api/prompts/*.md",
  "src/imbi/api/email/templates/*",
]
