[project]
name = "imbi-assistant"
version = "2.18.0"
description = "Imbi AI assistant service"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [
  { name = "Gavin M. Roy", email = "gavinr@aweber.com" },
]
classifiers = []
dependencies = [
  "anthropic>=0.84.0",
  "fastapi>=0.135.1,<0.137",
  "fastmcp>=2.0.0",
  "httpx>=0.28.1",
  "imbi-common[databases,mcp,server]==2.18.0",
  "pydantic~=2.12",
  "sentry-sdk>=2.48.0",
]

[project.scripts]
imbi-assistant = "imbi.assistant.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Coverage for the per-member `moon run assistant:test` run. Scoped to this
# member so the report/threshold reflect only imbi.assistant; the aggregate
# `root:coverage` run uses the root pyproject config instead.
[tool.coverage.run]
branch = true
source_pkgs = ["imbi.assistant"]

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 85
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/imbi"]
include = [
  "src/imbi/assistant/py.typed",
  "src/imbi/assistant/system_prompt.md",
]
