[project]
name = "imbi-gateway"
version = "2.17.0"
description = "Imbi webhook receiver"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [
  { name = "Dave Shawley", email = "daves@aweber.com" },
]
classifiers = []
dependencies = [
  "cel-python>=0.5.0",
  "fastapi>=0.135.1,<0.137",
  "httpx>=0.28.1",
  "imbi-common[databases,server]==2.17.0",
  "jsonpointer>=3.1.1",
  "psycopg[binary,pool]~=3.3.2",
  "pydantic~=2.12",
  "sentry-sdk>=2.48.0",
  "yarl~=1.22.0",
]

[project.scripts]
imbi-gateway = "imbi.gateway.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbi"]
include = [
  "src/imbi/gateway/py.typed",
]
