[project]
name = "imbi-gateway"
version = "2.19.0"
description = "Imbi webhook receiver"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [
  { name = "Dave Shawley", email = "daves@aweber.com" },
]
classifiers = []
dependencies = [
  "cel-python>=0.5.0",
  "fastapi>=0.135.1,<0.137",
  "httpx>=0.28.1",
  "imbi-common[databases,server]==2.19.0",
  "jsonpointer>=3.1.1",
  "psycopg[binary,pool]~=3.3.2",
  "pydantic~=2.12",
  "sentry-sdk>=2.48.0",
  "yarl~=1.22.0",
]

[project.scripts]
imbi-gateway = "imbi.gateway.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Coverage for the per-member `moon run gateway:test` run. Scoped to this
# member so the report/threshold reflect only imbi.gateway; the aggregate
# `root:coverage` run uses the root pyproject config instead.
[tool.coverage.run]
branch = true
source_pkgs = ["imbi.gateway"]

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 85
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/imbi"]
include = [
  "src/imbi/gateway/py.typed",
]
