[project]
name = "imbi-mcp"
version = "2.17.0"
description = "Imbi MCP server"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [
  { name = "Gavin M. Roy", email = "gavinr@aweber.com" },
]
classifiers = [
]
dependencies = [
  "fastmcp>=3.4.4",
  "httpx>=0.28.1",
  "imbi-common[mcp]==2.17.0",
  "pydantic~=2.12",
  "pyjwt>=2.10",
  "sentry-sdk>=2.48.0",
]

[project.scripts]
imbi-mcp = "imbi.mcp.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imbi"]
include = [
  "src/imbi/mcp/py.typed",
]
