[project]
name = "imbi-mcp"
version = "2.18.0"
description = "Imbi MCP server"
readme = "README.md"
requires-python = ">=3.14"
license = "BSD-3-Clause"
authors = [
  { name = "Gavin M. Roy", email = "gavinr@aweber.com" },
]
classifiers = []
dependencies = [
  "fastmcp>=3.4.4",
  "httpx>=0.28.1",
  "imbi-common[mcp]==2.18.0",
  "pydantic~=2.12",
  "pyjwt>=2.10",
  "sentry-sdk>=2.48.0",
]

[project.scripts]
imbi-mcp = "imbi.mcp.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Coverage for the per-member `moon run mcp:test` run. Scoped to this
# member so the report/threshold reflect only imbi.mcp; the aggregate
# `root:coverage` run uses the root pyproject config instead.
[tool.coverage.run]
branch = true
source_pkgs = ["imbi.mcp"]

[tool.coverage.report]
exclude_also = ["typing.TYPE_CHECKING"]
fail_under = 85
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/imbi"]
include = [
  "src/imbi/mcp/py.typed",
]
